# arionkoder-custom-iterator-lazy-evaluation

./: README.md
app/: main.py  pyproject.toml
app/routes/: payments.py
app/services/: lazy_collection.py  mock_payments.py  payments_process.py
