[tool.poetry]
name = "arionkoder-custom-iterator-lazy-evaluation"
package-mode = false
version = "0"
description = "Custom Iterator Lazy Evaluation"
authors = ["Diogo Bastos <bmnetto.diogo@gmail.com>"]

[tool.poetry-version-plugin]
source = ".version"

[tool.poetry.dependencies]
fastapi = {extras = ["all"], version = "^0.115.12"}
python = "^3.12"